Lanai : J2DDemo - Clipping - Two parallel lines do not appear with AA Rendering

XMLWordPrintable

    • 2d

      Run J2DDemo tests and go to Clipping tab.
      go to Intersection test
      here we can see that the two parallel lines that appears with opengl doesn't appear with metal.
      This is reported in mac mini 10.14.
      Screenshot is attached.

            Assignee:
            Ajit Ghaisas
            Reporter:
            Tejpal Rebari (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: