8244845: Lanai : J2DDemo - Clipping - Two parallel lines do not appear with AA Rendering